<resources>
    <string name="app_name">SafeCity</string>

    <string name="lbl_payment_details">Your Address: </string>
    <string name="lbl_loca">Locality: </string>
    <string name="lbl_city">city: </string>
    <string name="lbl_state">State: </string>
    <string name="country">Country: </string>
    <string name="pincode">PinCode: </string>
    <string name="dictrict">District: </string>
    <string name="ques">  </string>
    <string name="navigation_drawer_open">NavigationDrawerOpen</string>
    <string name="navigation_drawer_close"> NavigationDrawerClose</string>
    <string name="Select_Picture_UploadActivity">Select Picture from Gallery</string>

</resources>